# not-so-deep-learning

./: .pre-commit-config.yaml  environment-linux.yml  pyproject.toml
fast-ai/: example-model.py  toy-nn.py
fast-ai/resources/titanic/: titanic.xlsx  ~$titanic.xlsx
