[tool.poetry]
name = "not-so-deep-learning"
version = "0.1.0"
description = ""
authors = ["dupe <dupe@dupe.codes>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
pyarrow = "^15.0.0"
fastai = "^2.7.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "fastai.*",
]
ignore_missing_imports = true
